--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -20,6 +20,7 @@
           <tr>
             <th scope="col">Short URL</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Delete</th>
           </tr>
         </thead>
         <tbody>
@@ -27,12 +28,12 @@
             <tr>
               <td><%= url %></td>
               <td><%= urls[url] %></td>
+              <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
             </tr>
           <% } %>
         </tbody>
       </table>
     </section>
-    <section>Shorten a new URL <a href='#''>here</a></section>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
