--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,7 +16,16 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-      <section>Shorten a new URL <a href='#''>here</a></section>
+      <div class="card text-center">
+        <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+          <div class="form-group mb-2">
+            <label for="longURL">New URL:</label>
+            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+            <button type="submit" class="btn btn-primary">Update</button>
+          </div>
+        </form>
+      </div>
+      </div>
     <div class="card-footer text-muted"></div>
   </div>
   <!-- Bootstrap JS -->
