--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -16,8 +16,9 @@
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
         <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
       </div>
-      <div class="card text-center">
-        <form class="form-inline" action="/urls/<%= shortURL %>" method="POST">
+      <div class="card text-center" style="width: 100%; padding-top: 1em;">
+        <h3>Edit</h3>
+        <form class="form-inline" style="margin: auto" action="/urls/<%= shortURL %>" method="POST">
           <div class="form-group mb-2">
             <label for="longURL">New URL:</label>
             <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
