Some lint error fixes and header styling

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -22,7 +22,7 @@
         <form action="/login" method="POST">
           <div class="form-group mb-2">
             <input name="username"> %>
-            <button type="submit">Log in</button>
+            <button type="submit" class="btn btn-primary" style="background-color: Transparent; border-color: black">Log in</button>
           </div>
         </form>
       <% } %>
