--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,22 +15,26 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Log in</h3>
-      <form class="form-inline" action="/register" method="POST">
-        <div class="form-group mb-2">
-          <div style="width: 100%; border: 1px solid red">
-            <label for="Email" style="border: 1px solid red">Email:</label>
-            <input class="form-control" type="email" name="email" placeholder="example@example.com" style="width: 300px;">
+      <div class="card text-left">
+        <h3>Register</h3>
+      </div>
+      <div class="card text-left">
+        <form class="form-inline" action="/register" method="POST">
+          <div class="form-group mb-2">
+            <div style="width: 100%">
+              <input class="form-control" type="email" name="email" placeholder="Type in your email" style="width: 300px;">
+            </div>
+            <div style="width: 100%">
+              <input class="form-control" type="password" name="password" placeholder="Type in your password" style="width: 300px;">
+            </div>
+            <div>
+              <button type="submit" class="btn btn-primary">Register</button>
+            </div>
           </div>
-          <div style="width: 100%; border: 1px solid blue">
-            <label for="Password">Password:</label>
-            <input class="form-control" type="password" name="password" placeholder="example@example.com" style="width: 300px;">
-          </div>
-          <div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-          </div>
-        </div>
-      </form>
+        </form>
+      </div>
+      
+
     </main>
       <!-- Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
