Added register functionality (+reverted helper functions for ease of coding)

--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -8,20 +8,21 @@
       <div class="navbar-nav">
         <a class="nav-item nav-link" href="/urls">My URLs</a>
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
+        <a class="nav-item nav-link" href="/register">Register</a>
       </div>
     </div>
     <div style="align-content: right; text-align: right">
-      <% if (username) { %>
-        <%= `Logged in as ${username}` %>
+      <% if (user) { %>
         <form action="/logout" method="POST">
           <div class="form-group mb-2">
-            <button type="submit">Log out</button>
+            <%= `Logged in as ${user.email}` %>
+            <button type="submit" class="btn btn-primary" style="background-color: transparent; border-color: black;">Log out</button>
           </div>
         </form>
       <% } else { %>
         <form action="/login" method="POST">
           <div class="form-group mb-2">
-            <input name="username"> %>
+            <input name="username">
             <button type="submit" class="btn btn-primary" style="background-color: Transparent; border-color: black">Log in</button>
           </div>
         </form>
