--- a/views/register.ejs
+++ b/views/register.ejs
@@ -15,16 +15,18 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <div class="card text-left">
-        <h3>Register</h3>
+      <div style="padding-bottom: 1em;">
+        <h3>Create account</h3>
       </div>
-      <div class="card text-left">
-        <form class="form-inline" action="/register" method="POST">
+      <div>
+        <form action="/register" method="POST">
           <div class="form-group mb-2">
-            <div style="width: 100%">
+            <div style="width: 100%; padding-bottom: .5em;">
+              <label for="email">Email address</label>
               <input class="form-control" type="email" name="email" placeholder="Type in your email" style="width: 300px;">
             </div>
-            <div style="width: 100%">
+            <div style="width: 100%; padding-bottom: .5em;">
+              <label for="password">Password</label>
               <input class="form-control" type="password" name="password" placeholder="Type in your password" style="width: 300px;">
             </div>
             <div>
