--- a/views/login.ejs
+++ b/views/login.ejs
@@ -15,14 +15,20 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <div class="card text-left">
+      <div style="padding-bottom: 1em;">
         <h3>Log in</h3>
       </div>
-      <div class="card text-left">
+      <div>
         <form action="/login" method="POST">
           <div class="form-group mb-2">
-            <input class="form-control" type="email" name="email" placeholder="Type in your email" style="width: 300px;">
-            <input class="form-control" type="password" name="password" placeholder="Type in your password" style="width: 300px;">
+            <div style="width: 100%; padding-bottom: .5em;">
+              <label for="email">Email address</label>
+              <input class="form-control" type="email" name="email" placeholder="Type in your email" style="width: 300px;">
+            </div>
+            <div style="width: 100%; padding-bottom: .5em;">
+              <label for="password">Password</label>
+              <input class="form-control" type="password" name="password" placeholder="Type in your password" style="width: 300px;">
+            </div>
             <button type="submit" class="btn btn-primary">Log in</button>
         </form>
       </div>
