--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,25 +13,30 @@
   <%- include('partials/_header') %>
   
   <main style="margin: 1em;">
-    <h3>My URLs</h3>
-    <section>
-      <table class="table">
-        <thead>
-          <tr>
-            <th scope="col">Short URL</th>
-            <th scope="col">Long URL</th>
-            <th scope="col">Edit</th>
-            <th scope="col">Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <% for(let url in urls) { %>
-            <tr>
-              <td><%= url %></td>
-              <td><%= urls[url].longURL %></td>
-              <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
-              <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
-            </tr>
+    <% if(user) { %>
+      
+        <h3>My URLs</h3>
+        <section>
+          <table class="table">
+            <thead>
+              <tr>
+                <th scope="col">Short URL</th>
+                <th scope="col">Long URL</th>
+                <th scope="col">Edit</th>
+                <th scope="col">Delete</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+              <% for(let url in urls) { %>
+                <td><%= url %></td>
+                <td><%= urls[url].longURL %></td>
+                <td><form method="GET" action="/urls/<%= url %>"><button type="submit" class="btn btn-primary">Edit</button></form></td>
+                <td><form method="POST" action="/urls/<%= url %>/delete"><button type="submit" class="btn btn-primary">Delete</button></form></td>
+              </tr>
+            <% } %>
+          <% } else { %>
+            <h3>Please log in to see your URLs!</h3>
           <% } %>
         </tbody>
       </table>
