Added password hashing

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -36,7 +36,7 @@
               </tr>
             <% } %>
           <% } else { %>
-            <h3>Please log in to see your URLs!</h3>
+            <h3>Please <a href="/login">log in</a> or <a href="/register">register</a> to see your URLs!</h3>
           <% } %>
         </tbody>
       </table>
