--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -10,20 +10,25 @@
   <%- include('partials/_header') %>
   <div class="card text-center">
       <div class="card-header"></div>
-      <div class="card-body">
-        <h5 class="card-title">TinyURL for: <%= longURL.longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
-      </div>
-      <div class="card text-center" style="width: 100%; padding-top: 1em;">
-        <h3>Edit</h3>
-        <form class="form-inline" style="margin: auto" action="/urls/<%= shortURL %>" method="POST">
-          <div class="form-group mb-2">
-            <label for="longURL">New URL:</label>
-            <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
-            <button type="submit" class="btn btn-primary">Update</button>
-          </div>
-        </form>
-      </div>
+      <% if (shortURL) { %>
+        <div class="card-body">
+          <h5 class="card-title">TinyURL for: <%= longURL %></h5>
+          <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        </div>
+        <div class="card text-center" style="width: 100%; padding-top: 1em;">
+          <h3>Edit</h3>
+          <form class="form-inline" style="margin: auto" action="/urls/<%= shortURL %>" method="POST">
+            <div class="form-group mb-2">
+              <label for="longURL">New URL:</label>
+              <input class="form-control" type="text" name="longURL" placeholder="http://" style="width: 300px; margin: 1em">
+              <button type="submit" class="btn btn-primary">Update</button>
+            </div>
+          </form>
+        </div>
+      <% } else { %>
+        <h3>There was an error:</h3>
+        <h5><%= error %></h5>
+      <% } %>
     </div>
     <div class="card-footer text-muted"></div>
   </div>
